Refactor League Fav Toggle And Add League Table To Team Info

--- a/kmkscores/src/styles/Leagues.css
+++ b/kmkscores/src/styles/Leagues.css
@@ -192,6 +192,14 @@
   border-bottom: 1px solid #f4a340;
 }
 
+.leagueTable-title-starSelected {
+  cursor: pointer;
+}
+.leagueTable-title-starUnselected {
+  color: gray;
+  cursor: pointer;
+}
+
 @media (max-width: 450px) {
   .leagueTable-title-text {
     font-size: 17px;
