--- a/kmkscores/src/styles/Teams.css
+++ b/kmkscores/src/styles/Teams.css
@@ -60,7 +60,9 @@
 
 .search-countryFlag {
   height: 40px;
-  border-radius: 20px;
+  width: 40px;
+  object-fit: cover;
+  border-radius: 50%;
   margin-right: 20px;
 }
 
@@ -98,8 +100,10 @@
 }
 
 .teamSearch-country-flag {
-  width: 50px;
-  border-radius: 15px;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  border-radius: 50%;
   border: 1px solid #f4a340;
 }
 
