Add Dropdowns To Country Names In All Games

--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -91,7 +91,7 @@
 
 .datePickerContainer {
   overflow-x: auto;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .datePicker {
@@ -160,21 +160,34 @@
   margin-right: 20px;
 }
 
+.homefixtures-favLeagues-title {
+  text-align: left;
+  padding: 2px 0 2px 10px;
+  border-radius: 15px;
+  color: black;
+  background-color: #f4a340;
+  margin: 10px 0;
+}
+
 .country-container {
   display: flex;
   align-items: center;
 }
 
 .country-title {
-  margin: 0;
   width: 100%;
   text-align: left;
   cursor: pointer;
+  font-size: 18px;
+  padding: 2px 0 2px 10px;
+  border-radius: 15px;
+  color: #f4a340;
+  background-color: #28231d;
+  margin: 10px 0 5px 0;
 }
 
 .league {
   width: 100%;
-  margin-bottom: 10px;
 }
 
 .league:last-child {
@@ -183,9 +196,13 @@
 
 .league-header {
   text-align: left;
-  margin: 0 0 10px 0;
+  margin: 10px 0;
   display: flex;
   align-items: center;
+}
+
+.league-header-imageContainer {
+  display: flex;
 }
 
 .league-header-image {
