--- a/kmkscores/src/styles/Home.css
+++ b/kmkscores/src/styles/Home.css
@@ -84,6 +84,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 800px;
   min-height: 100px;
   text-align: center;
   justify-content: center;
